--- a/ChessClone2.vcxproj
+++ b/ChessClone2.vcxproj
@@ -110,7 +110,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\Include\freetype2\;$(ProjectDir)Dependencies\Include\;$(ProjectDir)Headers\;$(ProjectDir)Headers\Types\;$(ProjectDir)GameCode;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\Include\AudioEngine\;$(ProjectDir)Dependencies\Include\freetype2\;$(ProjectDir)Dependencies\Include\;$(ProjectDir)Headers\;$(ProjectDir)Headers\Types\;$(ProjectDir)GameCode;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
@@ -118,7 +118,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(ProjectDir)\Dependencies\Lib\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>freetyped.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freetyped.lib;glfw3.lib;AudioEngine.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -129,8 +129,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\Include\freetype2\;$(ProjectDir)Dependencies\Include\;$(ProjectDir)Headers\;$(ProjectDir)Headers\Types\;$(ProjectDir)GameCode;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\Include\AudioEngine\;$(ProjectDir)Dependencies\Include\freetype2\;$(ProjectDir)Dependencies\Include\;$(ProjectDir)Headers\;$(ProjectDir)Headers\Types\;$(ProjectDir)GameCode;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -138,7 +139,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(ProjectDir)\Dependencies\Lib\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>freetype.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freetype.lib;glfw3.lib;AudioEngine.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -188,7 +189,7 @@
     <ClInclude Include="Headers\Types\vector.h" />
     <ClInclude Include="Headers\ecs\EntityManager.h" />
     <ClInclude Include="Headers\ecs\ecsTypes.h" />
-    <ClInclude Include="Headers\utility.h" />
+    <ClInclude Include="Headers\helper.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderSrc\GUIFragment.glsl" />
