--- a/ChessClone2.vcxproj.filters
+++ b/ChessClone2.vcxproj.filters
@@ -143,7 +143,7 @@
     <ClInclude Include="Headers\components\guiComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Headers\utility.h">
+    <ClInclude Include="Headers\helper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameCode\Chess\settingsButton.h">
