--- a/ChessClone2.vcxproj.filters
+++ b/ChessClone2.vcxproj.filters
@@ -152,6 +152,9 @@
     <ClInclude Include="GameCode\Chess\exitButton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Headers\sceneManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderSrc\GUIVertex.glsl" />
