--- a/ChessClone2.vcxproj.filters
+++ b/ChessClone2.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Headers\ecs\ECSM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\guiMannager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\Types\color.h">
@@ -162,6 +165,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Headers\guiManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
